Adapt to previous changes - Tested version, runnable

--- a/FinalProject/FinalProject.vcxproj
+++ b/FinalProject/FinalProject.vcxproj
@@ -115,12 +115,13 @@
     <ClCompile Include="modelselectable.cpp" />
     <ClCompile Include="modelselector.cpp" />
     <ClCompile Include="modelsetter.cpp" />
+    <ClCompile Include="modelthumbnailwidget.cpp" />
     <ClCompile Include="pagewidget.cpp" />
     <ClCompile Include="pushbutton.cpp" />
     <ClCompile Include="renderable.cpp" />
     <ClCompile Include="roundedcornerwidget.cpp" />
     <ClCompile Include="sceneviewer.cpp" />
-    <ClCompile Include="scrolllist.cpp" />
+    <ClCompile Include="scrolllistwidget.cpp" />
     <ClCompile Include="shader.cpp" />
     <ClCompile Include="sidebar.cpp" />
     <ClCompile Include="texture.cpp" />
@@ -148,15 +149,16 @@
     <QtMoc Include="pagewidget.h" />
     <QtMoc Include="pushbutton.h" />
     <QtMoc Include="roundedcornerwidget.h" />
-    <ClInclude Include="scrolllist.h" />
+    <QtMoc Include="scrolllistwidget.h" />
+    <QtMoc Include="modelthumbnailwidget.h" />
     <ClInclude Include="texture.h" />
     <ClInclude Include="utils.h" />
     <ClInclude Include="vbo.h" />
     <ClInclude Include="ebo.h" />
     <ClInclude Include="vertex.h" />
     <ClInclude Include="vao.h" />
-    <ClInclude Include="modelselectable.h" />
-    <ClInclude Include="modelselector.h" />
+    <QtMoc Include="modelselectable.h" />
+    <QtMoc Include="modelselector.h" />
     <ClInclude Include="modelsetter.h" />
     <ClInclude Include="renderable.h" />
     <ClInclude Include="shader.h" />
