--- a/FinalProject/FinalProject.vcxproj
+++ b/FinalProject/FinalProject.vcxproj
@@ -143,7 +143,7 @@
     <QtMoc Include="editorpage.h" />
     <QtMoc Include="framelesswindow.h" />
     <QtMoc Include="lineeditwidget.h" />
-    <ClInclude Include="illuminant.h" />
+    <ClInclude Include="illuminer.h" />
     <ClInclude Include="lightCaster.h" />
     <ClInclude Include="logger.h" />
     <ClInclude Include="mesh.h" />
@@ -168,6 +168,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="fragmentshader.fs" />
+    <None Include="illuminant.fs" />
+    <None Include="illuminant.vs" />
     <None Include="vertexshader.vs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
